# crvrs-spacetraders

./: .gitignore  README.md  pants.toml  pyproject.toml  ruff.toml
crvrs_spacetraders/apps/ex-hello/src/ex_hello/: hello.py
crvrs_spacetraders/core/: pyproject.toml
crvrs_spacetraders/core/src/core/: __init__.py
crvrs_spacetraders/libs/request_client/: README.md  pyproject.toml
sandbox/: README.md  pyproject.toml
sandbox/projects/test/: main.py
sandbox/src/register-new-agent/: main.py
src/apps/ex-hello/: pyproject.toml
src/common/core/: pyproject.toml
src/common/core/src/core/: constants.py
