[project]
name = "Crvrs-Spacetraders"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "redjax", email = "jackenyon@gmail.com" }]
dependencies = [
    "core @ file:///${PROJECT_ROOT}/src/common/core",
    "register-agent @ file:///${PROJECT_ROOT}/src/packages/register-agent",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "nox>=2024.3.2",
    "ruff>=0.3.2",
    "pytest>=8.1.1",
    "pytest-xdist>=3.5.0",
]
