[project]
name = "sandbox"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "redjax", email = "jackenyon@gmail.com" }]
dependencies = [
    "core @ file:///${PROJECT_ROOT}/../src/common/core",
    "register-agent @ file:///${PROJECT_ROOT}/../src/packages/register-agent",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
