[project]
name = "core"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "redjax", email = "jackenyon@gmail.com" }]
dependencies = [
    "httpx>=0.27.0",
    "hishel>=0.0.24",
    "dynaconf>=3.2.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = []
